[tool.poetry]
name = "cltpj"
version = "0.2.0"
description = "Cálculo aproximado de salário líquido CLT x PJ"
authors = ["Nilo Menezes <nilo@nilo.pro.br>"]
license = "GPL 3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
rich = "^13.7.1"
scipy = "^1.14.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.6.0"
mypy = "^1.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "ANN", "BLE", "EM", "TRY003"]
