[tool.poetry]
name = "cltpj"
version = "0.2.1"
description = "Cálculo aproximado de salário líquido CLT x PJ"
authors = ["Nilo Menezes <nilo@nilo.pro.br>"]
license = "GNU GPL v3"
readme = "README.md"

classifiers = [
"Development Status :: 4 - Beta",
"Environment :: Console",
"Intended Audience :: End Users/Desktop",
"License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
"Natural Language :: Portuguese (Brazilian)"
]

[tool.poetry.dependencies]
python = "^3.12"
rich = "^13.7.1"
scipy = "^1.14.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.6.0"
mypy = "^1.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "ANN", "BLE", "EM", "TRY003"]
